# oc_repo

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: cli.py  main.py  projects.py  session.py
backend/agent/: engine.py  llm.py  prompt.py  safety.py
backend/tools/: __init__.py  ask_user.py  base.py  check_system.py  clone_repo.py  list_files.py  read_file.py  report_status.py  run_command.py  save_project.py  write_file.py
docs/superpowers/plans/: 2026-03-29-one-click-repo.md
docs/superpowers/specs/: 2026-03-29-one-click-repo-design.md
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ApprovalCard.tsx  AutoApprovedCard.tsx  ChatWindow.tsx  LandingHero.tsx  MessageBubble.tsx  ProjectList.tsx  StatusBar.tsx  SuccessScreen.tsx  TerminalOutput.tsx  ThinkingIndicator.tsx  ToolStartCard.tsx  UrlInput.tsx  UserInputWidget.tsx
frontend/src/hooks/: useWebSocket.ts
scripts/: test_e2e.sh
tests/: conftest.py  test_api.py  test_base.py  test_check_system.py  test_clone_repo.py  test_engine.py  test_list_files.py  test_llm.py  test_main.py  test_projects.py  test_read_file.py  test_run_command.py  test_safety.py  test_save_project.py  test_write_file.py
